	gtk/Graphics/UI/Gtk/Selectors/FileChooserButton.chs.pp,
	gtk/Graphics/UI/Gtk/Selectors/FileFilter.chs.pp,
	gtk/Graphics/UI/Gtk/TreeList/IconView.chs.pp,
	gtk/Graphics/UI/Gtk/TreeList/CellView.chs.pp,
	gtk/Graphics/UI/Gtk/Windows/AboutDialog.chs,
	gtk/Graphics/UI/Gtk/Windows/WindowGroup.chs: add several new modules.
	This adds ~2.6 Kloc.

	* gtk/Graphics/UI/Gtk.hs: export the new modules.

	* Makefile.am: add the new modules to libHSgtk_a_SOURCES.

2005-04-4 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/Graphics/UI/Gtk/Multiline/TextBuffer.chs,
	gtk/Graphics/UI/Gtk/Multiline/TextMark.chs,
	gtk/Graphics/UI/Gtk/Multiline/TextTag.chs.pp,
	gtk/Graphics/UI/Gtk/Multiline/TextTagTable.chs,
	gtk/Graphics/UI/Gtk/Multiline/TextView.chs: merge from
	generated modules. Changed code formatting and documentation. In one
	or two places fix minor bugs. Remove two non-exsistant functions from
	TextView module.

2005-04-3 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/Graphics/UI/Gtk/Selectors/ColorSelection.chs,
	gtk/Graphics/UI/Gtk/Selectors/ColorSelectionDialog.chs,
	gtk/Graphics/UI/Gtk/Selectors/FileChooser.chs.pp,
	gtk/Graphics/UI/Gtk/Selectors/FileChooserDialog.chs.pp,
	gtk/Graphics/UI/Gtk/Selectors/FileChooserWidget.chs.pp,
	gtk/Graphics/UI/Gtk/Selectors/FileSelection.chs.pp,
	gtk/Graphics/UI/Gtk/Selectors/FontSelection.chs,
	gtk/Graphics/UI/Gtk/Selectors/FontSelectionDialog.chs: merge from
	generated modules. Changed code formatting and documentation.

2005-04-2 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/Graphics/UI/Gtk/MenuComboToolbar/CheckMenuItem.chs.pp,
	gtk/Graphics/UI/Gtk/MenuComboToolbar/Combo.chs.pp,
	gtk/Graphics/UI/Gtk/MenuComboToolbar/ComboBox.chs.pp,
	gtk/Graphics/UI/Gtk/MenuComboToolbar/ComboBoxEntry.chs.pp,
	gtk/Graphics/UI/Gtk/MenuComboToolbar/ImageMenuItem.chs,
	gtk/Graphics/UI/Gtk/MenuComboToolbar/Menu.chs.pp,
	gtk/Graphics/UI/Gtk/MenuComboToolbar/MenuBar.chs,
	gtk/Graphics/UI/Gtk/MenuComboToolbar/MenuItem.chs,